--- a/scss/_mediaquerys.scss
+++ b/scss/_mediaquerys.scss
@@ -79,3 +79,10 @@
     }
 
 } 
+@media screen and (max-width:750px){
+    .banner_contenedor{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(2,1fr);
+    }
+}
