--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,2 +1,5 @@
-$color-primario: tomato;
-$color-secundario: rgb(189, 189, 189);
+$colores:(
+"color-primario": rgb(244, 101, 75);
+"color-secundario": rgb(244, 101, 75);
+"color-terciario": rgb(176,125,222);
+)
