--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -59,15 +59,15 @@ body{
 }
 .bg_animate{
     width: 100%;
-    height: 14vh;
+    height: 100vh;
     background:blueviolet;
-    overflow: hidden;
+    // overflow: hidden;
 }
 .header_nav{
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
 }
 .header_nav .contenedor{
     display: flex;
@@ -107,7 +107,8 @@ body{
     animation: movimiento 2.5s linear infinite;
 }
 .banner_img img{
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     display: block;
     border: solid 5px black;
     border-radius: 25px;
