--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,5 +1,5 @@
-$colores:(
-"color-primario": rgb(244, 101, 75);
-"color-secundario": rgb(244, 101, 75);
-"color-terciario": rgb(176,125,222);
+$colores: (
+"color-primario": rgb(244, 101, 75),
+"color-secundario":  rgb(250, 180, 180),
+"color-terciario": black,
 )
