--- a/css/main.css
+++ b/css/main.css
@@ -84,23 +84,18 @@ body {
 
 .bg_animate {
   width: 100%;
-  height: 100vh;
-  background: blueviolet;
-  overflow: hidden; }
+  background: blueviolet; }
 
-.header_nav {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0; }
+.header nav {
+  width: 100%; }
 
-.header_nav .contenedor {
+.header nav .contenedor {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px; }
 
-.header_nav h1 {
+.header nav h1 {
   color: aliceblue; }
 
 .header_nav nav a {
@@ -112,7 +107,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100%; }
+  height: 100%;
+  flex-wrap: wrap; }
 
 .banner_title h2 {
   color: aliceblue;
@@ -132,7 +128,8 @@ body {
   animation: movimiento 2.5s linear infinite; }
 
 .banner_img img {
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
   display: block;
   border: solid 5px black;
   border-radius: 25px;
@@ -210,11 +207,11 @@ body {
     text-decoration: none;
     text-align: center; }
   .navbar {
-    background-color: tomato; }
+    background-color: #f4654b; }
   .footer {
-    background-color: tomato; }
+    background-color: #f4654b; }
   body {
-    background-color: #bdbdbd; } }
+    background-color: #fab4b4; } }
 
 @keyframes burbujas {
   0% {
