--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -2,8 +2,7 @@ main{
     width: 100%;
 }
 body{
-    background-color: black;
-    width: 100%;
+    @include body (black)
 }
 .caja-grid{
     margin: 10px;
@@ -41,7 +40,7 @@ body{
 .img-4{
     width: 300px;
     height: 230px;
-     border-radius:20px;
+    border-radius:20px;
     border: solid 5px blueviolet;
 }
 .ima-hover:hover{
@@ -59,24 +58,22 @@ body{
 }
 .bg_animate{
     width: 100%;
-    height: 100vh;
     background:blueviolet;
-    // overflow: hidden;
+    
 }
-.header_nav{
-    width: 100%;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-}
-.header_nav .contenedor{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-}
-.header_nav h1 {
-    color: aliceblue;
+.header{
+    nav{
+        width: 100%;
+    }
+    nav .contenedor{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px;
+    }
+    nav h1{
+        color:aliceblue;
+    }    
 }
 .header_nav nav a {
     color: aliceblue;
@@ -88,6 +85,7 @@ body{
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    flex-wrap: wrap;
 }
 .banner_title h2{
     color: aliceblue;
