--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -86,6 +86,7 @@ body{
     align-items: center;
     height: 100%;
     flex-wrap: wrap;
+    padding: 10%;
 }
 .banner_title h2{
     color: aliceblue;
