--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -2,4 +2,6 @@ $colores: (
 "color-primario": rgb(244, 101, 75),
 "color-secundario":  rgb(250, 180, 180),
 "color-terciario": black,
+"color-alternativo":rgb(255, 255, 255) ,
+"color-violeta": blueviolet,
 )
