--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@
 .texto-h1 {
   display: flex;
   text-align: center;
-  align-items: center; }
+  align-items: center;
+  color: white; }
 
 .lista-1 {
   display: flex;
@@ -29,6 +30,9 @@
   transform: scale(2);
   color: #c07cff; }
 
+.h1-index {
+  color: white; }
+
 main {
   width: 100%; }
 
@@ -46,7 +50,8 @@ body {
 .texto-h3 {
   background-color: rgba(205, 88, 231, 0.713);
   text-align: center;
-  width: 50%; }
+  width: 50%;
+  color: white; }
 
 .img-1 {
   width: 300px;
@@ -161,6 +166,53 @@ body {
   animation-duration: 3s;
   animation-delay: 5s; }
 
+.main-qs {
+  width: 100%; }
+
+.h1-qs {
+  display: flex;
+  justify-content: center;
+  color: white; }
+
+.contenido-qs {
+  display: flex;
+  justify-content: center;
+  color: white;
+  border: solid 5px blueviolet;
+  margin: 5px;
+  text-align: center;
+  padding: 10px; }
+
+.form-contacto {
+  display: flex;
+  margin: 0 auto;
+  width: 500px; }
+
+.form-contacto-1 {
+  border: solid 10px blueviolet;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+  background-color: black;
+  color: aliceblue;
+  margin: 10px; }
+
+.form-nombre {
+  padding: 10px;
+  border: 5px solid blueviolet; }
+
+.form-apellido {
+  padding: 10px;
+  border: 5px solid blueviolet; }
+
+.form-email {
+  padding: 10px;
+  border: 5px solid blueviolet; }
+
+.form-comentario {
+  padding: 10px;
+  border: 5px solid blueviolet; }
+
 .footer {
   background-color: blueviolet;
   width: 100%;
@@ -212,7 +264,19 @@ body {
   .footer {
     background-color: #f4654b; }
   body {
-    background-color: #fab4b4; } }
+    background-color: #fab4b4; }
+  .form-contacto {
+    display: flex;
+    margin: 0 auto;
+    width: 100%; }
+  .form-contacto-1 {
+    border: solid 10px blueviolet;
+    padding: 2px;
+    text-align: center;
+    font-size: 20px;
+    background-color: black;
+    color: aliceblue;
+    margin: 0px; } }
 
 @keyframes burbujas {
   0% {
