--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -16,6 +16,7 @@ body{
     background-color: rgba(205, 88, 231, 0.713);
     text-align: center;
     width: 50%;
+    color: map-get($colores, "color-alternativo" );
 }
 
 .img-1{
@@ -58,7 +59,7 @@ body{
 }
 .bg_animate{
     width: 100%;
-    background:blueviolet;
+    background:map-get($colores, "color-violeta" );
     
 }
 .header{
@@ -142,4 +143,60 @@ body{
     left: 55%;
     animation-duration: 3s;
     animation-delay: 5s;
+}
+// quienes somos
+.main-qs{
+    width: 100%;
+}
+.h1-qs{
+    display: flex;
+    justify-content: center;
+    color: map-get($colores, "color-alternativo" );
+}
+.contenido-qs{
+    display: flex;
+    justify-content: center;
+    color: map-get($colores, "color-alternativo" );
+    border: solid 5px blueviolet;
+    margin: 5px;
+    text-align: center;
+    padding: 10px;
+}
+// contacto
+.form-contacto {
+    display: flex;
+    margin: 0 auto;
+    width: 500px;
+
+
+}
+
+.form-contacto-1 {
+    border: solid 10px blueviolet;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    background-color: black;
+    color: aliceblue;
+    margin: 10px;
+}
+
+.form-nombre {
+    padding: 10px;
+    border: 5px solid blueviolet;
+}
+
+.form-apellido {
+    padding: 10px;
+    border: 5px solid blueviolet;
+}
+
+.form-email {
+    padding: 10px;
+    border: 5px solid blueviolet;
+}
+
+.form-comentario {
+    padding: 10px;
+    border: 5px solid blueviolet;
 }
