--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,6 +7,7 @@
     display: flex;
     text-align: center;
     align-items: center;
+    color: map-get($colores, "color-alternativo" );
     
 }
 .lista-1{
@@ -18,12 +19,17 @@
     padding: 20px;
     text-decoration: none;
     
+    
 }
 .item-1{
     padding: 20px;
     font-size: 20px;
+   
 }
 .item-1:hover{
     transform: scale(2);
     color: rgb(192, 124, 255);
+}
+.h1-index{
+    color: map-get($colores, "color-alternativo" );
 }
