--- a/scss/_mediaquerys.scss
+++ b/scss/_mediaquerys.scss
@@ -49,6 +49,20 @@
     body{
         background-color: map-get($colores, "color-secundario" )
     }
+    .form-contacto {
+        display: flex;
+        margin: 0 auto;
+        width: 100%;
+    }
+    .form-contacto-1 {
+        border: solid 10px blueviolet;
+        padding: 2px;
+        text-align: center;
+        font-size: 20px;
+        background-color: black;
+        color: aliceblue;
+        margin: 0px;
+    }
 
 }
 @keyframes burbujas{
