--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -4,6 +4,12 @@ main{
 body{
     @include body (black)
 }
+.anchor{
+    color: white;
+}
+.redes-sociales{
+    text-decoration: none;
+}
 .caja-grid{
     margin: 10px;
     display: grid;
@@ -12,11 +18,16 @@ body{
     gap: 20px;
 
 }
+.grid-1{
+    display: flex;
+    flex-direction: column;
+}
 .texto-h3{
     background-color: rgba(205, 88, 231, 0.713);
     text-align: center;
-    width: 50%;
+    width: 75%;
     color: map-get($colores, "color-alternativo" );
+    margin: auto;
 }
 
 .img-1{
@@ -31,18 +42,21 @@ body{
     height: 230px;
      border-radius:20px;
     border: solid 5px blueviolet;
+    margin: auto;
 }
 .img-3{
     width: 300px;
     height: 230px;
      border-radius:20px;
     border: solid 5px blueviolet;
+    margin: auto;
 }
 .img-4{
     width: 300px;
     height: 230px;
     border-radius:20px;
     border: solid 5px blueviolet;
+    margin: auto;
 }
 .ima-hover:hover{
     transform: scale(1.20);
@@ -87,7 +101,6 @@ body{
     align-items: center;
     height: 100%;
     flex-wrap: wrap;
-    padding: 10%;
 }
 .banner_title h2{
     color: aliceblue;
@@ -113,6 +126,8 @@ body{
     border: solid 5px black;
     border-radius: 25px;
     box-shadow: 5px 8px 12px black;
+    margin: 10px;
+    height: 400px;
 }
 
 /* burbujas */
@@ -159,8 +174,11 @@ body{
     color: map-get($colores, "color-alternativo" );
     border: solid 5px blueviolet;
     margin: 5px;
-    text-align: center;
     padding: 10px;
+}
+.p-qs{
+    width: 60%;
+    text-align: center;
 }
 // contacto
 .form-contacto {
